# restaurentpy

./: data_scrape_with_api.ipynb  demo.ipynb  llama.ipynb  main.ipynb  pyproject.toml  requirements.txt  run_pipeline.ipynb
restaurentpy/: data.py  pipeline.py  sentiment.py  topic_model.py  translate.py
