[tool.poetry]
name = "restaurentpy"
version = "0.1.0"
description = ""
authors = ["gouthaman <gouthaman87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
langdetect = "^1.0.9"
openpyxl = "^3.1.2"
tqdm = "^4.66.2"
deep-translator = "^1.11.4"
plotly = "^5.21.0"
nbformat = "^5.10.4"
spacy = "^3.7.4"
sentence-transformers = "^2.7.0"
hdbscan = "^0.8.33"
umap = "^0.1.1"
bertopic = "^0.16.1"
nltk = "^3.8.1"
logger = "^1.4"
clean-text = "^0.6.0"
spellchecker = "^0.4"
pyspellchecker = "^0.8.1"
textblob = "^0.18.0.post0"
gensim = "^4.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
