[tool.poetry]
name = "restaurentpy"
version = "0.1.0"
description = ""
authors = ["gouthaman <gouthaman87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
langdetect = "^1.0.9"
openpyxl = "^3.1.2"
deep-translator = "^1.11.4"
plotly = "^5.21.0"
nbformat = "^5.10.4"
sentence-transformers = "^2.7.0"
nltk = "^3.8.1"
clean-text = "^0.6.0"
textblob = "^0.18.0.post0"
scipy = "^1.13.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
