[tool.poetry]
name = "restaurentpy"
version = "0.1.0"
description = ""
authors = ["gouthaman <gouthaman87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.5.3"
langdetect = "^1.0.9"
deep-translator = "^1.11.4"
textblob = "^0.18.0.post0"
torch = "2.2.0"
bertopic = "0.16.1"
numpy = "1.26.2"
cleantext = "^1.1.4"
openpyxl = "^3.1.4"
clean-text = "^0.6.0"
ollama = "^0.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
